--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
                 <div class="col-12">
                     <div class="content">
                         <h1>Ottieni 10 indirizzi email</h1>
-                        
+                        <button class="btn btn-sm btn-primary">Genera ora</button>
+                        <ul>
+                            <li></li>
+                        </ul>
                     </div>
                 </div>
             </div>
