[UPD] created function that gets a single email

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <div class="col-12">
                     <div class="content">
                         <h1>Ottieni 10 indirizzi email</h1>
-                        <button class="btn btn-sm btn-primary">Genera ora</button>
+                        <button class="btn btn-sm btn-primary" @click="getTenEmails()">Genera ora</button>
                         <ul>
-                            <li></li>
+                            <li>{{ email }}</li>
                         </ul>
                     </div>
                 </div>
