--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
                 <div class="col-12">
                     <div class="content">
                         <h1>Ottieni 10 indirizzi email</h1>
-                        <button class="btn btn-sm btn-primary" @click="getTenEmails()">Genera ora</button>
-                        <ul>
+                        <button class="btn btn-sm btn-primary" @click="getEmail()">Genera ora</button>
+                        <div>{{ email }}</div>
+                        <!-- <ul class="list-unstyled">
                             <li>{{ email }}</li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
