--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <div class="col-12">
                     <div class="content">
                         <h1>Ottieni 10 indirizzi email</h1>
-                        <button class="btn btn-sm btn-primary" @click="getEmail()">Genera ora</button>
+                        <button class="btn btn-sm btn-primary" @click="getTenEmails()">Genera ora</button>
                         <div>{{ email }}</div>
-                        <ul class="list-unstyled" v-for="(mail, index) in email">
-                            <li>{{ mail }}</li>
+                        <ul class="list-unstyled">
+                            <li v-for="(email, index) in emails">{{ email }}</li>
                         </ul>
                     </div>
                 </div>
