--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <h1>Ottieni 10 indirizzi email</h1>
                         <button class="btn btn-sm btn-primary" @click="getTenEmails()">Genera ora</button>
                         <ul class="list-unstyled">
-                            <li v-for="(email, index) in emails">{{ email }}</li>
+                            <li v-for="(email, index) in emails" :key="index">{{ email }}</li>
                         </ul>
                     </div>
                 </div>
