--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="content">
                         <h1>Ottieni 10 indirizzi email</h1>
                         <button class="btn btn-sm btn-primary" @click="getTenEmails()">Genera ora</button>
-                        <ul class="list-unstyled">
+                        <ul class="list-unstyled" v-if="emails.length == 10">
                             <li v-for="(email, index) in emails" :key="index">{{ email }}</li>
                         </ul>
                     </div>
